# ZenBot

./: .gitignore  Main.py  Project.eve  README.md  Run.sh  Setup.py  Structure.md  TODO.txt  Todo.md  config.json  pyproject.toml  requirements.txt  run.sh  structure.txt
Bot/: Bot.py  Config.py  Events.py  Main.py  Run.py  Setup.py
Bot - Old/: Config.py  Main.py
Bot - Old/Data/: Info.eve
Bot - Old/Helpers/: EmbedHelper.py
Bot - Old/Modules/: CommandCheck.py  FileHandler.py  TwitterGetter.py  YoutubeGetter.py
Bot/Core/: Check.py  Database.py  Plugins.py  Server.py  __init__.py
Bot/Data/: Config.json  Log.txt  Plugins.json
Bot/Helpers/: EmbedHelper.py  Prefix.py  URLFinder.py  misc.py
Bot/Modules/: Events.py  FileHandler.py  Translator.py
Bot/Utilities/: Collection.py  __init__.py
Commands/Addons/: AboutAddons.txt
Commands/Default/: HelpCommand.py  RoleCommand.py  ServerCommand.py
Commands/Search/: GoogleCommand.py  SoundcloudCommand.py  UnityDocsCommand.py  UrbanDictionaryCommand.py  YoutubeChannelCommand.py  YoutubeCommand.py
Commands/Staff/: BanCommand.py  WarnCommand.py
Data/: Info.eve  Rules.eve
Data/HelpMessages/: Help.eve  Management.eve  (+2 more)
Helpers/: EmbedHelper.py
Modules/: FileHandler.py  RoleCheck.py  Translate.py
Tests/: GoogleTest.py  TranslateTest.py
Website/: Features.html  elements.html  generic.html  index.html
ZenBot/: Bot.py  Config.json  DB.pem  Events.py  Main.py
scripts/: lint.sh  run.sh  test.sh
tests/: test_cache.py  test_dbobject.py  test_mute.py  test_zenbot.py
zenbot/: bot.py  context.py  events.py  main.py
(+123 files in other folders)
